# Jupyterlab_Extensions

./: README.md
chat-app/: README.md  app-shell.config.ts  index.html  package-lock.json  package.json
chat-app/public/locales/en/: chatbot.json
chat-app/src/: boot.ts  start.tsx
chat-app/src/components/ChatArea/: ChatArea.tsx
chat-app/src/components/ChatForm/: ChatForm.tsx  styles.ts
chat-app/src/components/ChatItem/: ChatItem.tsx  styles.ts
chat-app/src/components/ChatPanel/: ChatPanel.tsx  styles.ts
chat-app/src/components/FloatingButton/: FloatingButton.tsx
chat-app/src/components/HeaderButton/: HeaderButton.tsx
chat-app/src/lib/api/: chat.ts
chat-app/src/pages/Chat/: Chat.tsx  styles.ts
chat-app/src/providers/: ChatContext.tsx  ChatHistory.tsx  Provider.tsx
chat-app/src/types/: chat.d.ts
chat-jupyterlab-ext/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml  webpack.config.js
chat-jupyterlab-ext/.github/workflows/: build.yml  check-release.yml
chat-jupyterlab-ext/hv_apps_chat_jupyterlab_ext/: __init__.py
chat-jupyterlab-ext/schema/: app-shell-setup.json
chat-jupyterlab-ext/src/: index.ts
chat-jupyterlab-ext/src/app-shell-setup-ext/: index.ts  tokens.ts  utils.ts
chat-jupyterlab-ext/src/chat-companion-ext/: ChatCompanion.tsx  index.ts
chat-jupyterlab-ext/static/: react-from-webpack.js
pentaho-copilot-ui/: .eslintignore  .eslintrc.json  .prettierignore  Dockerfile  README.md  app-shell.config.ts  hcp.html  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
pentaho-copilot-ui/sample-app/: index.html  start.bat  start.sh
pentaho-copilot-ui/src/: boot.ts
pentaho-copilot-ui/src/components/ChatArea/: ChatArea.tsx  styles.ts
pentaho-copilot-ui/src/components/ChatForm/: ChatForm.tsx  styles.ts
pentaho-copilot-ui/src/components/ChatHistory/: ChatHistory.tsx  styles.ts
pentaho-copilot-ui/src/components/ChatItem/: ChatItem.tsx  styles.ts
pentaho-copilot-ui/src/components/ChatPanel/: ChatPanel.tsx  styles.ts
pentaho-copilot-ui/src/components/Files/: Files.tsx  styles.ts
pentaho-copilot-ui/src/components/FilesList/: FilesList.tsx  index.tsx
pentaho-copilot-ui/src/jupyterlab/: ChatWidget.tsx
pentaho-copilot-ui/src/lib/: i18n.ts
pentaho-copilot-ui/src/lib/api/: chat.ts  (+2 more)
pentaho-copilot-ui/src/providers/: ChatContext.tsx  ChatHistory.tsx
pentaho-copilot-ui/src/tests/: setupTests.ts
pentaho-copilot-ui/src/types/: chat.d.ts  file.d.ts
pentaho-copilot-ui/src/utils/: useRefreshSafeState.ts
(+8 files in other folders)
